# pytorch_memory_planning

./: .gitignore  README.md  all_model.txt  demo.py  environment.yml  example_models.py  important_models.txt  jemalloc_experiments.py  main.py  memory_observer.py  model_names.txt  modeling_gpt2.py  numbe_test.py  ops.yml  plotting.py  profile.py  profile_models.py  requirements.txt  res.csv  resnet18_call_chains.yml  resnet18_ops_dict.yml  run.sh  run_jemalloc_tests.sh  shape_infer.py  strategies.py  test_shape_coverage.py
bash_scripts/: make_models.sh
cpp_src/: CMakeLists.txt
cpp_src/jemalloc_bindings/: CMakeLists.txt  main.cpp  setup.py
cpp_src/misc/: demo.cpp  profile_models.cpp
cpp_src/runtime_patch/: CMakeLists.txt  runtime.py  runtime_patch.cpp
cpp_src/strategies/: CMakeLists.txt  greedy_by_size.cpp  greedy_by_size.h  hash.h  interval_tree.hpp  memory_planning.cpp  memory_planning.h  setup.py
runtime_patch/: CMakeLists.txt  runtime_patch.cpp
